# FileSearchApp

./: CMakeLists.txt
docum for fileapp/: 1 copy.docx  2 раздел.docx  курсач.mdj  пз — Капуза copy.docx
log/: search_log.txt
src/: main.cpp
